# newDBMS

./: .gitignore  CMakeLists.txt  DBMS.pro  README.md  analysissql.cpp  analysissql.h  createdatabase.cpp  createdatabase.h  createdatabase.ui  creattable.cpp  creattable.h  creattable.ui  dataoperation.cpp  dataoperation.h  dataoperation.ui  dbmanager.cpp  dbmanager.h  deletedatabase.cpp  deletedatabase.h  deletedatabase.ui  deletetable.cpp  deletetable.h  deletetable.ui  fieldmanager.cpp  fieldmanager.h  fieldmanager.ui  indexmanager.cpp  indexmanager.h  landing.cpp  landing.h  landing.ui  logdialog.cpp  logdialog.h  logdialog.ui  login.cpp  login.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+25 more)
data/db1/: userinfo.txt  userprivilege.txt
data/db1/table/t1/: privilege.txt  t1.tb  t1.tdf
data/db1/table/test2/: test2.tb
data/db1/table/ttt/: ttt.tb
data/sys/: curuse.txt
log/: sys.txt
